Fix test execution